<resources>
    <!-- For programming purpose -->
    <string name="appointed_category">appointedCategory</string>
    <string name="appointed_mylist">appointedMylist</string>
    <string name="mylist_account_id">accountId</string>
    <string name="request_origin">realOrigin</string>

    <string name="article_pass_id">requestedId</string>
    <string name="article_pass_type">requestedType</string>
    <string name="article_pass_purchase_id">requestedPurchase</string>
    <string name="article_display_mode">displayMode</string>

    <string name="pref_url">urlData</string>
    <string name="secrel_url">secretURL</string>

    <string name="pref_credentials">accountData</string>
    <string name="secret_account">accountJson</string>

    <string name="tag_articles">articles</string>
    <string name="tag_sales">sales</string>
    <string name="tag_purchases">purchases</string>

    <string name="account_display_mode">displayMode</string>
    <string name="pass_account_id">passAccountId</string>

    <!-- For normal purpose -->
    <string name="app_name">HSRmarket</string>
    <string name="app_url">web.hsrmarket.ch:3000</string>

    <string name="tab_books">Books</string>
    <string name="tab_electronic_devices">Electronic Devices</string>
    <string name="tab_office_supplies">Office Supplies</string>
    <string name="tab_others">Others</string>
    <string name="tab_article">Article</string>
    <string name="tab_seller">Seller</string>
    <string name="tab_buyer">Buyer</string>

    <string name="description_empty_sign">The List is empty.</string>
    <string name="title_activity_article">Article</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_my_list">MyListActivity</string>
    <string name="title_articles">My Articles</string>
    <string name="title_sales">My Sales</string>
    <string name="title_purchases">My Purchases</string>
    <string name="title_adding_article">Adding new Article</string>


    <string name="article_name">Name</string>
    <string name="article_description">Description</string>
    <string name="article_price">Price</string>
    <string name="article_condition">Condition</string>
    <string name="article_created_at">Created At</string>
    <string name="article_id">Article No.</string>

    <string name="article_author">Author</string>
    <string name="article_publisher">Publisher</string>
    <string name="article_isbn">ISBN</string>

    <string name="article_producer">Manufacturer</string>
    <string name="article_model">Model No.</string>

    <string name="article_purchase_date">Purchase Date</string>
    <string name="article_status">Status</string>

    <string name="status_open">Pending</string>
    <string name="status_done">Completed</string>

    <string name="article_hint_type">Type</string>
    <array name="article_type">
        <item>Book</item>
        <item>Electronic Device</item>
        <item>Office Supply</item>
        <item>Other</item>
    </array>

    <string name="login_send">Login</string>
    <string name="login_register">Register</string>

    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_password_confirm">Confirm Password</string>
    <string name="register_student_id">Student Id</string>
    <string name="register_first_name">First Name</string>
    <string name="register_last_name">Surname</string>
    <string name="register_street">Street</string>
    <string name="register_street_no">No.</string>
    <string name="register_city">City</string>
    <string name="register_zip">ZIP Code</string>
    <string name="register_phone">Phone No.</string>

    <string name="msg_successful_purchased">Your purchase is successful.</string>
    <string name="msg_successful_new_article">Your new article was successfully added.</string>
    <string name="msg_no_internet">There is no Internet connection available. Please check your Internet connection.</string>
    <string name="msg_listview_empty">No articles available.</string>
    <string name="msg_fail_login">Your email or password is invalid. Please try again.</string>
    <string name="msg_form_empty">It can\'t be empty.</string>
    <string name="msg_form_invalid_email">It is an invalid email.</string>
    <string name="msg_form_password_length">It must be at least 8 Characters.</string>
    <string name="msg_form_password_match">It doesn\'t match with Password.</string>
    <string name="msg_login_first">Please login first.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_home">Home</string>
    <string name="menu_articles">My Articles</string>
    <string name="menu_sales">My Sales</string>
    <string name="menu_purchases">My Purchases</string>
    <string name="menu_account">My Account</string>
    <string name="menu_add_article">Add Article</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_login">Login</string>


</resources>
