<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_articles"
            android:title="@string/menu_articles" />

        <item
            android:id="@+id/nav_sales"
            android:title="@string/menu_sales" />

        <item
            android:id="@+id/nav_purchases"
            android:title="@string/menu_purchases" />

        <item
            android:id="@+id/nav_account"
            android:title="@string/menu_account" />

        <item
            android:id="@+id/nav_add_article"
            android:title="@string/menu_add_article" />

        <item
            android:id="@+id/nav_logout"
            android:title="@string/menu_logout" />

    </group>

</menu>
