<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/general">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_margin="@dimen/general"
    android:orientation="vertical"

    >

    <!-- Following adding fields -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:padding="4dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"

            android:text="@string/article_hint_type"
            android:id="@+id/article_hint_type"
            android:visibility="gone"
            />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"

            android:id="@+id/article_type"
            android:entries="@array/article_type"
            android:visibility="gone"
            />

    </LinearLayout>

    <!-- Following purchase fields -->

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/article_purchase_date"
            android:layout_weight="5"

            android:id="@+id/article_hint_purchase_date"
            >

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/article_purchase_date"
                android:inputType="text"
                android:textColor="@android:color/black"

                android:visibility="gone"
                android:nextFocusDown="@+id/article_status"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/article_status"
            android:layout_weight="5"

            android:id="@+id/article_hint_status"
            >

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/article_status"
                android:inputType="text"
                android:textColor="@android:color/black"

                android:visibility="gone"
                />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <!-- Following standard fields -->

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/article_name"

        android:id="@+id/article_hint_name"
        >

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/article_name"
            android:inputType="text"
            android:textColor="@android:color/black"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/article_description"
        >

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/article_description"
            android:inputType="textMultiLine"
            android:textColor="@android:color/black"
            />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/article_price"
            android:layout_weight="5"
            >

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/article_price"
                android:inputType="numberDecimal"
                android:textColor="@android:color/black"

                android:nextFocusDown="@+id/article_condition"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/article_condition"
            android:layout_weight="5"
            >

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/article_condition"
                android:inputType="number"
                android:textColor="@android:color/black"
                />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:hint="@string/article_created_at"
            >

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/article_created_at"
                android:inputType="date"
                android:textColor="@android:color/black"

                android:nextFocusDown="@+id/article_id"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/article_id"
            android:layout_weight="5"

            android:id="@+id/article_hint_id"
            >

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/article_id"
                android:inputType="number"
                android:textColor="@android:color/black"
                />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <!-- Following adaptable fields -->

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/article_hint_extra1"
        >

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/article_extra1"
            android:inputType="text"
            android:textColor="@android:color/black"

            android:visibility="gone"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/article_hint_extra2"
        >

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/article_extra2"
            android:inputType="text"
            android:textColor="@android:color/black"

            android:visibility="gone"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/article_hint_extra3"
        >

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/article_extra3"
            android:inputType="text"
            android:textColor="@android:color/black"

            android:visibility="gone"
            />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>

</android.support.v4.widget.NestedScrollView>